fix content alignment

--- a/src/pages/hello.module.scss
+++ b/src/pages/hello.module.scss
@@ -1,6 +1,7 @@
 @import "../constants";
 
 .wrapper {
+    width: 100%;
     max-width: 1200px;
     margin: 0 auto;
     padding-block-start: 1rem;
