--- a/src/pages/unsere-formate.module.scss
+++ b/src/pages/unsere-formate.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+    width: 100%;
     max-width: 1200px;
     margin: 0 auto;
     padding-block-start: 1rem;
